--- a/config.toml
+++ b/config.toml
@@ -2,3 +2,10 @@ baseURL = 'https://liuchang0812.github.io/'
 languageCode = 'en-us'
 title = 'Liu Chang Blog'
 theme = "PaperMod"
+
+[outputs]
+home=['HTML', 'RSS', 'JSON']
+
+[params]
+ShowCodeCopyButtons=true
+ShowPostNavLinks=true
