--- a/config.yaml
+++ b/config.yaml
@@ -26,7 +26,7 @@ params:
     buttons:
       - name: 👨🏻‍💻文章
         url: posts
-      - name: 📕关于
+      - name: 🙋🏻‍♂️关于
         url: about
           
 markup:
