--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+public
+
 # Runtime data
 pids
 *.pid
@@ -57,5 +59,3 @@ typings/
 # dotenv environment variables file
 .env
 
-
-public/
