disable first page.
Signed-off-by: liuchang <liuchang082@gmail.com>

--- a/config.yaml
+++ b/config.yaml
@@ -13,6 +13,7 @@ outputs:
     - RSS
     - JSON
 params:
+  disableSpecial1stPost: true
   ShowCodeCopyButtons: true
   ShowPostNavLinks: true
   ShowReadingTime: true
