--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: 'https://liuchang0812.github.io/'
+baseURL: 'https://www.liuchang0812.com/'
 languageCode: zh-cn
 title: ​Tech and Text Tales
 theme: PaperMod
