--- a/config.yaml
+++ b/config.yaml
@@ -12,7 +12,9 @@ outputs:
     - HTML
     - RSS
     - JSON
+
 params:
+  social: true
   disableSpecial1stPost: true
   ShowCodeCopyButtons: true
   ShowPostNavLinks: true
