--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 baseURL: 'https://www.liuchang0812.com/'
 languageCode: zh-cn
-title: ​Tech and Text Tales
+title: 程序员刘畅
 theme: PaperMod
 enableInlineShortcodes: true
 enableEmoji: true
